--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <!-- weather -->
     <div class="card">
         <div class="search">
             <input type="text" spellcheck="check" name="" id="" placeholder="enter your city name">
